<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.siddhathatravels.siddhathatravels.Fragment.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="Student Profile"
            android:textSize="20sp"/>
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:padding="10dp"
                android:singleLine="true"
                />

            <TextView
                android:id="@+id/tv_fathers_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/father_name"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:padding="10dp"
                android:maxLines="3"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/tv_batch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/batch"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/tv_stream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stream"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/tv_roll_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/roll_no"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="15sp"
                />
        <TextView
            android:id="@+id/tvdatetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="8dp"
            android:padding="10dp"
            android:textSize="15sp"
            android:text="@string/select_date_of_availing_transport"/>

        <!--<TextView-->
            <!--android:id="@+id/tv_emergency_contact"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/emergency_contact"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:fontFamily="sans-serif-light"-->
            <!--android:padding="5dp"-->
            <!--android:textSize="15sp"-->
            <!--/>-->

            <TextView
                android:id="@+id/tv_student_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_contact"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/tv_father_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/father_contact"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/tv_mother_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mother_contact"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="15sp"
                />

        <TextView
            android:id="@+id/tv_monthly_charges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monthly_charges"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/check_transport"
            android:text="@string/transport_availing_for"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>

    </LinearLayout>
</ScrollView>