<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.siddattatravels.siddattatravels.Fragment.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edt_name_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">
        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:padding="10dp"
            android:singleLine="true"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edt_fathers_name_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="15dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">
        <EditText
            android:id="@+id/edt_fathers_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/father_name"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="15sp"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edt_address_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">
        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="15sp"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edt_batch_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">
        <EditText
            android:id="@+id/edt_batch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/batch"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="15sp"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edt_stream_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">
        <EditText
            android:id="@+id/edt_stream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stream"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="15sp"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edt_roll_no_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">
        <EditText
            android:id="@+id/edt_roll_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/roll_no"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="15sp"
            />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/datetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="15sp"
            android:hint="@string/select_date_of_availing_transport"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/date_picker"
            android:drawableLeft="@drawable/date_picker"
            style="@android:style/Widget.EditText"/>

        <TextView
            android:id="@+id/tv_emergency_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emergency_contact"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-light"
            android:padding="5dp"
            android:textSize="15sp"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edt_student_contact_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">
        <EditText
            android:id="@+id/edt_student_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_contact"
            android:padding="10dp"
            android:maxLength="10"
            android:inputType="phone"
            android:singleLine="true"
            android:textSize="15sp"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edt_father_contact_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">
        <EditText
            android:id="@+id/edt_father_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/father_contact"
            android:padding="10dp"
            android:maxLength="10"
            android:inputType="phone"
            android:singleLine="true"
            android:textSize="15sp"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edt_mother_contact_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">
        <EditText
            android:id="@+id/edt_mother_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mother_contact"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="15sp"
            />
        </android.support.design.widget.TextInputLayout>
        <CheckBox
            android:id="@+id/check_transport"
            android:text="@string/transport_availing_for"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textSize="15sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/check_terms"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text=""
                />
            <TextView
                android:id="@+id/tvTerms"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:clickable="true"
                android:textSize="15sp"
                android:focusable="true" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/register"/>
    </LinearLayout>
</ScrollView>